<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="174dp"
                android:layout_height="93dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="135dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:text="@string/phone_number"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text91"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/back_91"
                        android:gravity="center"
                        android:text="+91"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editLoginNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/number_back"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/enter_your_number"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="10"
                        android:minHeight="48dp"
                        android:padding="12dp"
                        android:shadowColor="#000000"
                        android:shadowDy="1"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:onClick="sendSignUp"
                    android:paddingTop="15dp"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/captchaCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/i_am_not_a_robot"
                    android:textColor="@color/dark_green"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/new_back"
                    android:outlineProvider="paddedBounds"
                    android:padding="10dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editCaptchaNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints=""
                    android:background="@drawable/new_back"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="Enter Above Answer"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="10"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:shadowColor="#000000"
                    android:shadowDy="1"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/phn_up"
                android:layout_width="155dp"
                android:layout_height="62dp"
                android:layout_marginBottom="84dp"
                android:backgroundTint="#546C5E"
                android:onClick="sendOtpLogin"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/get_otp"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>