<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment"
    android:background="@color/bg_color"
    >

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="413dp"
        android:layout_height="160dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card4_back"
        android:backgroundTint="@color/dark_green"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/about_faultverse"
            android:textColor="@color/bg_color"
            android:textSize="30dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="420dp"
        android:layout_height="557dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/comp_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="332dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/back_about"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="318dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about_info"

                android:textAlignment="gravity"
                android:textColor="@color/dark_green"
                android:textSize="18dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/privac_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/privacy_and_policy"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/terms_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/terms_and_conditions"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/mainicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

