<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".phn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/prof_b"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/mainicon" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/current_first_name"
            android:textColor="@color/dark_green"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/phn_back"
            android:gravity="center"
            android:text="Anushka"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/edit_first_name"
            android:textColor="@color/dark_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/phn_back"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:textColor="@color/dark_green"
            android:textSize="16dp" />

        <Button
            android:onClick="firstname"
            android:id="@+id/phn_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/update_changes"
            android:textColor="@color/bg_color" />
    </LinearLayout>


</LinearLayout>