<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/adminServiceVIew"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/card5_back"
            android:backgroundTint="@color/dark_green"
            android:padding="10dp"
            android:translationZ="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/landline_white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/adminCompCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/card5_back"
            android:backgroundTint="@color/dark_green"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="@drawable/card5_back"
                android:backgroundTint="@color/bg_color"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_id"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cusIdView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cus_id" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_serv"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cus_SerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cus_ser" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cus_DateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cus_date" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hiddenLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView111"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issue_desc"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cus_IssueDescView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="cus_Issue" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hiddenLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView400"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cus_RemarkView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="cus_Remark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hiddenLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView110"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cleared_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cus_ClearedDateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="cus_cDate" />
                </LinearLayout>

                <View
                    android:id="@+id/divider9"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ViewMORELESS11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/view_more" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>